Removes min-height on footer due to xl navbar-collapse issue

--- a/css/style.css
+++ b/css/style.css
@@ -790,7 +790,6 @@ footer {
   padding: 0;
   padding-top: 8px;
   margin-top: -47px;
-  min-height: 25px;
 }
 
 .pretty-text {
